# Graduation-Project-2026

./: .gitignore  .rmf_schedule_node.yaml  README.md  mock_robot_state_publisher.py  run2.md  run3.md
dashboard/: .rmf_schedule_node.yaml  main.py  main_window.py  requirements.txt  style.qss
dashboard/data/: map_parser.py  results_loader.py  scenario_loader.py
dashboard/ros/: fleet_listener.py
dashboard/tabs/: comparison_tab.py  dashboard_tab.py  experiment_tab.py  map_tab.py
dashboard/utils/: gazebo_control.py  paths.py  process_manager.py  window_manager.py
dashboard/widgets/: chart_widgets.py  metric_card.py  robot_graphics.py
src/dkr_controller/: package.xml  setup.cfg  setup.py
src/dkr_controller/config/: dkr_params.yaml
src/dkr_controller/dkr_controller/: deadlock_detector.py  fleet_state_publisher.py  reservation_server.py  resource_graph.py  standalone_traffic_manager.py  traffic_manager_node.py
src/dkr_controller/launch/: dkr_controller.launch.py  dkr_standalone.launch.py
src/dkr_controller/msg/: README.md
src/idkr_controller/: package.xml  setup.cfg  setup.py
src/idkr_controller/idkr_controller/: conflict_classifier.py  cp_manager.py  deadlock_detector.py  reservation_server_idkr.py  resource_graph_idkr.py  standalone_traffic_manager_idkr.py  task_dispatcher_dkr.py
src/idkr_controller/launch/: idkr_standalone.launch.py
src/metric_logger/: package.xml  setup.cfg  setup.py
src/metric_logger/launch/: metric_logger.launch.py
src/metric_logger/metric_logger/: conflict_tracker.py  (+5 more)
src/reservation_viz/: package.xml  setup.cfg  setup.py
(+22 files in other folders)
